#pragma once

#include "parser.hpp"
#include "widget.hpp"

#include <functional>

class Browser : public Widget {
public:
    Browser(const Rect& rect, const std::string& label);

    void render() override;

    void add(File& file);

    void setCallback(std::function<void()> callback);
    void setElementRect(Rect rect);

    Data& getData();
    bool getSelect();

private:
    std::vector<File> files;
    int currFile;
    int currData;

    std::function<void()> callback;

    Rect elementRect;
};